# ios

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
bootloader/: Cargo.toml
bootloader/src/: lib.rs  main.rs
kernel/: Cargo.toml  build.rs
kernel/src/: main.rs  process.rs  runtime.rs  scheduler.rs
kernel/src/arch/: mod.rs  system.rs
kernel/src/arch/x86/: acpi.rs  boot.rs  boot.s  gdt.rs  interrupts.rs  ioapic.rs  lapic.rs  mod.rs  paging.rs  smp.rs  syscall.rs  threads.rs
kernel/src/block/: mbr.rs  mod.rs
kernel/src/drivers/: pci.rs
kernel/src/drivers/block/: virtio_blk.rs
kernel/src/drivers/video/: console.rs  mod.rs
kernel/src/drivers/virtio/: pci.rs  virtq.rs
kernel/src/fs/: mod.rs
kernel/src/shell/: shell.rs
kernel/src/tasks/: executor.rs  task.rs
scripts/: run.sh
src/: main.rs  runtime.rs
src/arch/: mod.rs  system.rs
src/arch/x86/: acpi.rs  boot.rs  gdt.rs  interrupts.rs  ioapic.rs  lapic.rs  mod.rs  paging.rs  pci.rs
src/arch/x86/efi/: stub.rs
src/block/: mod.rs
src/drivers/: i8042.rs  mod.rs  pci.rs
src/drivers/block/: virtio_blk.rs
src/drivers/video/: console.rs  fb.rs
src/drivers/virtio/: mod.rs  pci.rs  virtq.rs
src/fs/: vfat.rs
src/shell/: shell.rs
src/tasks/: mod.rs
userspace/prog1/: Cargo.toml
userspace/prog1/src/: main.rs
